# stars

./: pyproject.toml
stars/: __init__.py  __main__.py
stars/tests/: test_http.py
