[tool.poetry]
name = "stars"
version = "0.1.0"
description = ""
authors = ["Terrac Skiens <terrac.skiens@hyperscience.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
argparse = "^1.4.0"
requests = "^2.27.1"
ratelimit = "^2.2.1"
requests-mock = "^1.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
pytest = "^7.1.2"
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
